--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <!-- TELA 1: NOME DOS PARTICIPANTES -->
   <!-- Seu site NÃO pode bloquear iframe.
- Se usar headers, NÃO use: X-Frame-Options: DENY "<meta http-equiv=
- Adicionei para solucao de possiveis conflitos:"Content-Security-Policy"  content="frame-ancestors 'self' https://discord.com *.discord.com">""-->
+ Se usar headers, NÃO use: X-Frame-Options: DENY "<meta http-equiv= Adicionei para solucao de possiveis conflitos:"Content-Security-Policy"  content="frame-ancestors 'self' https://discord.com *.discord.com">""-->
 
   <section id="start-screen" class="screen active">
     <div class="screen-content">
