Melhora a estrutura e estilo da tela inicial do quiz, incluindo ajustes no CSS e melhorias na lógica de abertura do jogo em nova aba.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'self' https://discord.com *.discord.com">
+  
   <title>Iniciar Quiz</title>
+  
   <style>
-    /* CSS embutido apenas para essa tela de entrada */
+    /* Reset básico e centralização */
     body {
-      background-color: #313338; /* Cor de fundo do Discord */
+      background-color: #313338; /* Cor de fundo oficial do Discord moderno */
       color: #fff;
-      font-family: sans-serif;
+      font-family: 'gg sans', 'Helvetica Neue', Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -18,23 +21,63 @@
       height: 100vh;
       margin: 0;
       text-align: center;
+      user-select: none; /* Evita seleção de texto feia */
     }
-    .logo { font-size: 80px; margin-bottom: 20px; }
-    h1 { margin-bottom: 10px; }
-    p { color: #b5bac1; max-width: 400px; margin-bottom: 30px; }
+
+    /* Estilo do Logo/Emoji */
+    .logo { 
+      font-size: 80px; 
+      margin-bottom: 24px;
+      filter: drop-shadow(0 4px 6px rgba(0,0,0,0.3));
+    }
+
+    /* Tipografia */
+    h1 { 
+      margin: 0 0 16px 0; 
+      font-size: 24px;
+      font-weight: 700;
+    }
+
+    p { 
+      color: #b5bac1; 
+      max-width: 400px; 
+      margin-bottom: 32px; 
+      line-height: 1.5;
+      font-size: 16px;
+    }
     
+    /* Botão de Jogar */
     .btn-jogar {
-      background-color: #5865f2; /* Azul Discord */
+      background-color: #5865f2; /* Blurple (Azul Discord) */
       color: white;
-      padding: 15px 40px;
+      padding: 16px 48px;
       text-decoration: none;
       font-weight: bold;
-      border-radius: 5px;
+      border-radius: 8px;
       font-size: 18px;
-      transition: transform 0.2s;
+      transition: all 0.2s ease-in-out;
+      border: none;
+      cursor: pointer;
+      display: inline-block;
+      box-shadow: 0 4px 15px rgba(88, 101, 242, 0.4);
     }
-    .btn-jogar:hover { background-color: #4752c4; transform: scale(1.05); }
-    .footer { margin-top: 30px; font-size: 12px; color: #777; }
+
+    .btn-jogar:hover { 
+      background-color: #4752c4; 
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(88, 101, 242, 0.6);
+    }
+
+    .btn-jogar:active {
+      transform: translateY(0);
+    }
+
+    /* Rodapé */
+    .footer { 
+      margin-top: 32px; 
+      font-size: 12px; 
+      color: #949ba4; 
+    }
   </style>
 </head>
 <body>
@@ -42,20 +85,31 @@
   <div class="logo">🧠</div>
 
   <h1>Quiz de Bandeiras</h1>
-  <p>Este jogo requer um navegador externo para a melhor experiência. Clique abaixo para iniciar!</p>
+  <p>Este jogo requer um navegador externo para a melhor experiência. Clique abaixo para iniciar o desafio!</p>
 
-<a href="https://quiz-de-grupo.vercel.app/jogo.html" target="_blank" class="btn-jogar">
+  <a href="https://quiz-de-grupo.vercel.app/jogo.html" target="_blank" class="btn-jogar">
     JOGAR AGORA 🚀
   </a>
 
   <div class="footer">Você será redirecionado para o navegador.</div>
 
   <script>
+    // Script para garantir a abertura da nova aba burlando bloqueios de popup do iframe
     document.querySelector('.btn-jogar').addEventListener('click', (e) => {
-      e.preventDefault(); // Impede o clique normal para garantir que o script rode
+      e.preventDefault(); // Impede o comportamento padrão do link para o JS assumir
       
-      // Abre o arquivo do jogo em nova aba
-      window.open('https://quiz-de-grupo.vercel.app/jogo.html', '_blank');
+      const urlDestino = 'https://quiz-de-grupo.vercel.app/jogo.html';
+
+      // Tenta abrir usando a API window.open
+      const novaAba = window.open(urlDestino, '_blank');
+
+      // Fallback: Se o bloqueador de popup impedir, tenta redirecionar via location ou criar clique forçado
+      if (!novaAba || novaAba.closed || typeof novaAba.closed == 'undefined') {
+          console.log("Popup bloqueado, tentando método alternativo...");
+          // Cria um elemento temporário e clica nele programaticamente
+          // Isso as vezes engana o bloqueador melhor que window.open direto
+          location.assign(urlDestino); 
+      }
     });
   </script>
 
